# dfa-samplers

./: pyproject.toml
dfa_samplers/: dfa_samplers.py
tests/: test_smoke.py
