[tool.poetry]
name = "dfa-samplers"
version = "0.1.1"
description = "Library for implementing dfa sampling strategies (pull requests welcome)."
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "dfa_samplers" },
]

[tool.poetry.dependencies]
python = "^3.10"
dfa = "^4.6.4"
dfa-mutate = "^0.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
